--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,6 @@
 
 html,
 body {
-    height: 100%;
     font-size: 100%;
     font-family: sans-serif;
 }
@@ -55,6 +54,7 @@ ol {
 /* Font */
 $main-font: "Roboto", sans-serif;
 $title-font: "Raleway", sans-serif;
+$cursive-font: "Edu AU VIC WA NT Pre", sans-serif;
 $third-font: Arial, sans-serif;
 
 /* Color Palette*/
@@ -106,20 +106,19 @@ h6 {
 
 .header {
     width: 100%;
-    height: 150px;
+    height: 1080px;
     margin-bottom: 8rem;
-    position: sticky;
     top: 0;
-
+    position: relative;
+    
     &__container {
+        position: sticky;
         max-width: 1440px;
-        height: 100%;
+        height: 150px;
         margin: auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: $secondary-color solid 2px;
-        background-color: #EAEAEA;
     }
 
     &__logo {
@@ -128,6 +127,13 @@ h6 {
         display: flex;
         justify-content: center;
         align-items: center;
+
+        & img{
+            height: 100%;
+            width: 100%;
+            // TODO: posez la question sur les couleurs
+            filter: contrast(110%) saturate(100%) brightness(110%);
+        }
     }
 
     &__navbar {
@@ -148,14 +154,14 @@ h6 {
         padding: 10px 0;
         display: inline-block;
         overflow: hidden;
-        color: #333; /* Couleur du lien */
+        color: $background-color; /* Couleur du lien */
         font-size: 1rem;
         font-weight: 500;
         text-decoration: none;
         transition: color 0.3s ease-in-out;
 
         &:hover {
-            color: #007bff;
+            color: $primary-color;
         }
 
         &::before,
@@ -165,7 +171,7 @@ h6 {
             left: 0;
             width: 100%;
             height: 2px;
-            background: #007bff; /* Couleur des lignes */
+            background: $primary-color; /* Couleur des lignes */
             transition: transform 0.3s ease-in-out;
         }
 
@@ -183,5 +189,36 @@ h6 {
         &:hover::after {
             transform: translateX(0);
         }
+    }
+
+    &__wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -1;
+
+        & img {
+            width: 100%;
+            max-height: 1080px;
+            object-fit: cover;
+            filter: grayscale(100%) brightness(70%) contrast(120%);
+            position: relative;
+            mask-image: linear-gradient(to bottom, black 60%, transparent 100%);
+            -webkit-mask-image: linear-gradient(to bottom, black 60%, transparent 100%);
+        }
+    }
+
+    &__tagline{
+        position: absolute;
+        top: 30%;
+        left: 10%;
+    }
+
+    &__title{
+        color: $background-color;
+        font-family: $cursive-font;
+        font-size: 4rem;
+        font-weight: 300;
     }
 }
