--- a/sass/main.scss
+++ b/sass/main.scss
@@ -233,88 +233,418 @@ h6 {
 ***              ***
 ********************/
 
-.about-us__image-container {
-    position: relative;
-    height: 800px;
-    width: 800px;
-}
+.about-us {
+    width: 100%;
+    height: 1200px;
+    margin-bottom: 8rem;
+    margin-top: 18rem;
 
-.circle img,
-.loupe img,
-.guy img {
-    position: absolute;
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-    top: 200px;
-    left: 200px;
-    border: solid 1px red; /* Pour vérifier la position */
-}
+    &__container {
+        position: relative;
+        width: 1440px;
+        margin: auto;
+    }
 
-.circle img {
-    transform: translate(-50%, -50%) scale(0);
-    animation: bounceIn 1.5s ease-in-out 1s forwards;
-}
+    &__image-container {
+        position: absolute;
+        top: 0%;
+        height: 1200px;
+        width: 100%;
+        z-index: 4;
+        // display: none; // TODO: virer
 
-.loupe img {
-    top: 213px;
-    left: 217px;
-    transform: translate(-50%, -50%) scale(0); /* Ajout du centrage */
-    animation: loupe-rotate 2s ease-in-out 0.5s forwards;
-}
+        &::after {
+            content: "";
+            height: 330px;
+            width: 330px;
+            background-color: $background-color;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            border-radius: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            z-index: -1;
+            animation: bounceIn 1.5s ease-in-out 1s forwards;
+        }
+    }
 
-.guy img {
-    top: 200px;
-    left: 206px;
-    transform: translate(-50%, -50%) scale(0); /* Ajout du centrage */
-    animation: bounceIn 1.8s ease-in-out 2.5s forwards;
-}
+    &__circle img,
+    &__magnifier img,
+    &__guy img {
+        position: absolute;
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
+        top: calc(50%);
+        left: calc(50% - 15px);
+    }
 
-/* Animations */
-@keyframes loupe-rotate {
-    0% {
-        transform: translate(-50%, -50%) scale(0) rotate(0deg);
+    &__circle img {
+        transform: translate(-50%, -50%) scale(0);
+        animation: bounceIn 1.5s ease-in-out 1s forwards;
     }
-    100% {
-        transform: translate(-50%, -50%) scale(1) rotate(360deg);
-    }
-}
 
-@keyframes bounceIn {
-    0%,
-    20%,
-    40%,
-    60%,
-    80%,
-    100% {
-        -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-        transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    &__magnifier img {
+        top: calc(50% + 21px);
+        left: calc(50% + 21px);
+        transform: translate(-50%, -50%) scale(0); /* Ajout du centrage */
+        animation: loupe-rotate 2s ease-in-out 0.5s forwards;
     }
-    0% {
-        opacity: 0;
-        -webkit-transform: scale3d(0.3, 0.3, 0.3);
-        transform: translate(-50%, -50%) scale3d(0.3, 0.3, 0.3);
+
+    &__guy img {
+        top: 50%;
+        left: calc(50% + 3px);
+        transform: translate(-50%, -50%) scale(0); /* Ajout du centrage */
+        animation: bounceIn 2s ease-in-out 2.5s forwards;
     }
-    20% {
-        -webkit-transform: scale3d(1.1, 1.1, 1.1);
-        transform: translate(-50%, -50%) scale3d(1.1, 1.1, 1.1);
+
+    /* Animations */
+    @keyframes loupe-rotate {
+        0% {
+            transform: translate(-50%, -50%) scale(0) rotate(0deg);
+        }
+        100% {
+            transform: translate(-50%, -50%) scale(1) rotate(360deg);
+        }
     }
-    40% {
-        -webkit-transform: scale3d(0.9, 0.9, 0.9);
-        transform: translate(-50%, -50%) scale3d(0.9, 0.9, 0.9);
+
+    @keyframes bounceIn {
+        0%,
+        20%,
+        40%,
+        60%,
+        80%,
+        100% {
+            -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+            transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        }
+        0% {
+            opacity: 0;
+            -webkit-transform: scale3d(0.3, 0.3, 0.3);
+            transform: translate(-50%, -50%) scale3d(0.3, 0.3, 0.3);
+        }
+        20% {
+            -webkit-transform: scale3d(1.1, 1.1, 1.1);
+            transform: translate(-50%, -50%) scale3d(1.1, 1.1, 1.1);
+        }
+        40% {
+            -webkit-transform: scale3d(0.9, 0.9, 0.9);
+            transform: translate(-50%, -50%) scale3d(0.9, 0.9, 0.9);
+        }
+        60% {
+            opacity: 1;
+            -webkit-transform: scale3d(1.03, 1.03, 1.03);
+            transform: translate(-50%, -50%) scale3d(1.03, 1.03, 1.03);
+        }
+        80% {
+            -webkit-transform: scale3d(0.97, 0.97, 0.97);
+            transform: translate(-50%, -50%) scale3d(0.97, 0.97, 0.97);
+        }
+        100% {
+            -webkit-transform: scale3d(1, 1, 1);
+            transform: translate(-50%, -50%) scale3d(1, 1, 1);
+        }
     }
-    60% {
-        opacity: 1;
-        -webkit-transform: scale3d(1.03, 1.03, 1.03);
-        transform: translate(-50%, -50%) scale3d(1.03, 1.03, 1.03);
+
+    &__articles {
+        position: relative;
+        width: 1440px;
+        height: 1200px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        gap: 0 5rem;
     }
-    80% {
-        -webkit-transform: scale3d(0.97, 0.97, 0.97);
-        transform: translate(-50%, -50%) scale3d(0.97, 0.97, 0.97);
+
+    &__article {
+        width: 100%;
+        height: 400px;
+
+        &:nth-of-type(1) {
+            width: 680px;
+            border-top: $primary-color solid 3px;
+            grid-area: 1 / 1 / 2 / 2;
+            opacity: 0;
+            transform: translate(-100%, 0%);
+            position: absolute;
+            top: calc(50% - 100px);
+            right: -100%;
+            animation: article-left-expand 0.8s ease-in-out 3.8s forwards;
+        }
+
+        &:nth-of-type(2) {
+            width: 680px;
+            border-top: red solid 3px;
+            grid-area: 1 / 2 / 2 / 3;
+            position:absolute;
+            top: calc(50% - 100px);
+            left: 0;
+            opacity: 0;
+            animation: article-left-expand 0.8s ease-in-out 7s forwards;
+        }
+        
+        &:nth-of-type(3) {
+            width: 680px;
+            border-bottom: #f9bc16 solid 3px;
+            grid-area: 2 / 1 / 3 / 2;
+            opacity: 0;
+            transform: translate(-100%, -100%);
+            position: absolute;
+            bottom: calc(-50% + 100px);
+            right: -100%;
+            animation: article-left-expand 0.8s ease-in-out 10.2s forwards;
+        }
+        
+        &:nth-of-type(4) {
+            width: 680px;
+            border-bottom: #83c440 solid 3px;
+            grid-area: 2 / 2 / 3 / 3;
+            opacity: 0;
+            position:absolute;
+            top: calc(0%);
+            left: 0%;
+            animation: article-left-expand 0.8s ease-in-out 13.4s forwards;
+        }
+
+        // Animation des articles
+        @keyframes article-left-expand {
+            0% {
+                width: 0;
+            }
+            100% {
+                width: 100%;
+                opacity: 1;
+            }
+        }
     }
-    100% {
-        opacity: 1;
-        -webkit-transform: scale3d(1, 1, 1);
-        transform: translate(-50%, -50%) scale3d(1, 1, 1);
+
+    // Div gérant les bordures diagonales
+    &__wraper {
+        &:nth-of-type(1) {
+            height: 565.68px;
+            width: 565.68px;
+            border-bottom: $primary-color solid 2px;
+            position: absolute; /* Position pour placer le pseudo-élément */
+            top: calc(50% - 400px); /* Ajustez selon vos besoins */
+            left: calc(50%); /* Ajustez selon vos besoins */
+            transform: translate(-50%, -50%) rotate(45deg);
+            opacity: 0;
+            animation: border-bottom-expand 0.8s ease-in-out 3s forwards;
+        }
+        
+        &:nth-of-type(2) {
+            height: 65.68px;
+            width: 258px;
+            border-right: red solid 2px;
+            position: absolute; /* Position pour placer le pseudo-élément */
+            top: calc(50% - 288px); /* Ajustez selon vos besoins */
+            left: calc(50% + 112px); /* Ajustez selon vos besoins */
+            transform: translate(-50%, -50%) rotate(45deg);
+            opacity: 0;
+            animation: border-right-expand 0.8s ease-in-out 6.2s forwards;
+        }
+
+        &:nth-of-type(3) {
+            height: 565.68px;
+            width: 565.68px;
+            border-left: #f9bc16 solid 2px;
+            position: absolute; /* Position pour placer le pseudo-élément */
+            top: calc(50% + 400px); /* Ajustez selon vos besoins */
+            left: calc(50%); /* Ajustez selon vos besoins */
+            transform: translate(-50%, -50%) rotate(45deg);
+            opacity: 0;
+            animation: border-left-expand 0.8s ease-in-out 9.4s forwards;
+        }
+
+        &:nth-of-type(4) {
+            height: 565.68px;
+            width: 565.68px;
+            border-top: #83c440 solid 2px;
+            position: absolute; /* Position pour placer le pseudo-élément */
+            top: calc(50% + 400px); /* Ajustez selon vos besoins */
+            left: calc(50%); /* Ajustez selon vos besoins */
+            transform: translate(-50%, -50%) rotate(45deg);
+            opacity: 0;
+            animation: border-top-expand 0.8s ease-in-out 12.6s forwards;
+        }
+
+        /* Animation des bordures diagonales */
+        @keyframes border-bottom-expand {
+            0% {
+                width: 0;
+            }
+            100% {
+                width: 565.68px;
+                opacity: 1;
+                background-color: $background-color;
+            }
+        }
+
+        @keyframes border-right-expand {
+            0% {
+                height: 0;
+            }
+            99%{
+                height: 565px;
+                border-bottom: none;
+            }
+            100% {
+                height: 565.68px;
+                opacity: 1;
+                background-color: $background-color;
+                border-bottom: $primary-color solid 2px;
+            }
+        }
+        
+        @keyframes border-left-expand {
+            0% {
+                height: 0;
+            }
+            100% {
+                height: 565.68px;
+                opacity: 1;
+                background-color: $background-color;
+            }
+        }
+        
+        @keyframes border-top-expand {
+            0% {
+                width: 0;
+            }
+            99%{
+                height: 565px;
+                border-left: none;
+            }
+            100% {
+                width: 565.68px;
+                opacity: 1;
+                background-color: $background-color;
+                border-left: #f9bc16 solid 2px;
+            }
+        }
+    }
+
+    &__content {
+        &--1 {
+            height: 100%;
+            width: 100%;
+            background-color: lighten($primary-color, 40%);
+            display: flex;
+            justify-content: space-evenly;
+            flex-flow: column;
+            opacity: 0;
+            animation: content-top-expand 0.8s ease-in-out 4.6s forwards;
+            overflow: hidden;
+
+            & h2,
+            & p {
+                transform: translateX(-100%);
+                animation: text-left-entry 0.8s ease-in-out 5.4s forwards;
+                padding-right: 10rem;
+            }
+        }
+
+        &--2 {
+            height: 100%;
+            width: 100%;
+            background-color: lighten(red, 40%);
+            display: flex;
+            justify-content: space-evenly;
+            flex-flow: column;
+            opacity: 0;
+            animation: content-top-expand 0.8s ease-in-out 7.8s forwards;
+            overflow: hidden;
+            text-align: right;
+
+            & h2,
+            & p {
+                transform: translateX(100%);
+                animation: text-right-entry 0.8s ease-in-out 8.6s forwards;
+                padding-left: 10rem;
+            }
+        }
+        
+        &--3 {
+            height: 100%;
+            width: 100%;
+            background-color: lighten(#f9bc16, 40%);
+            display: flex;
+            justify-content: space-evenly;
+            flex-flow: column;
+            transform: translate(-100%, -100%);
+            position: absolute;
+            top: 100%;
+            right: -100%;
+            opacity: 0;
+            animation: content-top-expand 0.8s ease-in-out 11s forwards;
+            overflow: hidden;
+            
+            & h2,
+            & p {
+                transform: translateX(-100%);
+                animation: text-left-entry 0.8s ease-in-out 11.8s forwards;
+                padding-right: 15rem;
+            }
+        }
+        
+        &--4 {
+            height: 100%;
+            width: 100%;
+            background-color: lighten(#83c440, 40%);
+            display: flex;
+            justify-content: space-evenly;
+            flex-flow: column;
+            opacity: 0;
+            transform: translate(-100%, -100%);
+            position: absolute;
+            top: 100%;
+            right: -100%;
+            animation: content-top-expand 0.8s ease-in-out 14.2s forwards;
+            overflow: hidden;
+            text-align: right;
+
+            & h2,
+            & p {
+                transform: translateX(100%);
+                animation: text-right-entry 0.8s ease-in-out 15s forwards;
+                padding-left: 10rem;
+            }
+        }
+        
+        @keyframes content-top-expand {
+            0% {
+                height: 0;
+            }
+            100% {
+                height: 100%;
+                opacity: 1;
+            }
+        }
+
+        @keyframes text-left-entry {
+            0% {
+                -webkit-transform: translateX(-100%);
+                transform: translateX(-100%);
+                visibility: visible;
+            }
+            100% {
+                -webkit-transform: translateX(0);
+                transform: translateX(0);
+            }
+        }
+        
+        @keyframes text-right-entry {
+            0% {
+                -webkit-transform: translateX(100%);
+                transform: translateX(100%);
+                visibility: visible;
+            }
+            100% {
+                -webkit-transform: translateX(0);
+                transform: translateX(0);
+            }
+        }
     }
 }
