--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 ***             ***
 *******************/
 
-@use 'sass:color';
+@use "sass:color";
 
 /********************
 ***               ***
@@ -79,6 +79,7 @@ $warning-color: #ffc107;
 ***   Mixins   ***
 ***            ***
 ******************/
+
 /********************
 ***               ***
 ***   Fonctions   ***
@@ -112,22 +113,27 @@ h6 {
 ***            ***
 ******************/
 
-.header {
-    width: 100%;
-    height: 1080px;
-    margin-bottom: 8rem;
-    top: 0;
+.sticky_wrapper{
     position: relative;
-    z-index: 1;
+    z-index: 10;
+}
+
+.header {
 
     &__container {
         position: sticky;
-        max-width: 1440px;
-        height: 150px;
-        margin: auto;
+        top: 0;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        /* From https://css.glass */
+        background: rgba(255, 255, 255, 0.25);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.28);
+        z-index: 100;
     }
 
     &__logo {
@@ -140,7 +146,6 @@ h6 {
         & img {
             height: 100%;
             width: 100%;
-            // TODO: posez la question sur les couleurs
             filter: contrast(110%) saturate(100%) brightness(110%);
         }
     }
@@ -163,14 +168,14 @@ h6 {
         padding: 10px 0;
         display: inline-block;
         overflow: hidden;
-        color: $background-color; /* Couleur du lien */
+        color:color.adjust($primary-color, $lightness: 20%); /* Couleur du lien */
         font-size: 1rem;
         font-weight: 500;
         text-decoration: none;
         transition: color 0.3s ease-in-out;
 
         &:hover {
-            color: $primary-color;
+            color: color.adjust($success-color, $lightness: 20%);
         }
 
         &::before,
@@ -180,7 +185,7 @@ h6 {
             left: 0;
             width: 100%;
             height: 2px;
-            background: $primary-color; /* Couleur des lignes */
+            background: color.adjust($success-color, $lightness: 20%); /* Couleur des lignes */
             transition: transform 0.3s ease-in-out;
         }
 
@@ -200,12 +205,20 @@ h6 {
         }
     }
 
-    &__wrapper {
+    &__wrapper{
+        position: static;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+    }
+
+    &__content {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        z-index: -1;
+        min-height: 1080px;
+        z-index: 2;
 
         & img {
             width: 100%;
@@ -904,33 +917,33 @@ h6 {
         gap: 1rem;
     }
 
-    &__nav{
+    &__nav {
         grid-area: 1 / 1 / 2 / 2;
     }
 
-    &__legal{
+    &__legal {
         grid-area: 1 / 2 / 2 / 3;
     }
 
-    &__copyright{
+    &__copyright {
         height: 2rem;
         grid-area: 2 / 1 / 3 / 3;
         align-self: end;
     }
 
-    &__title{
+    &__title {
         font-size: 1.5rem;
     }
 
-    &__nav-list{
-        display:flex;
+    &__nav-list {
+        display: flex;
         flex-flow: column;
         gap: 1rem;
         margin-top: 1.8rem;
     }
 
-    &__legal-list{
-        display:flex;
+    &__legal-list {
+        display: flex;
         flex-flow: column;
         gap: 1rem;
         margin-top: 1.8rem;
@@ -949,7 +962,7 @@ h6 {
     // position: fixed;
     top: 0;
     left: 0;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.6);
@@ -1092,7 +1105,7 @@ h6 {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6); /* Overlay sombre */
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     // visibility: hidden; /* Caché par défaut */
@@ -1150,7 +1163,7 @@ h6 {
 
     &__body {
         color: #333;
-        font-family: 'Arial', sans-serif;
+        font-family: "Arial", sans-serif;
         line-height: 1.6;
     }
 
@@ -1217,7 +1230,7 @@ h6 {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6); /* Overlay sombre */
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     // visibility: hidden; /* Cachée par défaut */
@@ -1275,7 +1288,7 @@ h6 {
 
     &__body {
         color: #333;
-        font-family: 'Arial', sans-serif;
+        font-family: "Arial", sans-serif;
         line-height: 1.6;
         overflow-y: auto; /* Permet le défilement si le contenu est trop long */
         max-height: 80vh; /* Limite la hauteur à 80% de la vue */
@@ -1355,7 +1368,7 @@ h6 {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6); /* Overlay sombre */
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     // visibility: hidden;
@@ -1413,7 +1426,7 @@ h6 {
 
     &__body {
         color: #333;
-        font-family: 'Arial', sans-serif;
+        font-family: "Arial", sans-serif;
         line-height: 1.6;
         overflow-y: auto; /* Permet le défilement si le contenu est trop long */
         max-height: 80vh; /* Limite la hauteur à 80% de la vue */
