--- a/sass/main.scss
+++ b/sass/main.scss
@@ -168,14 +168,15 @@ h6 {
         padding: 10px 0;
         display: inline-block;
         overflow: hidden;
-        color:color.adjust($primary-color, $lightness: 20%); /* Couleur du lien */
-        font-size: 1rem;
-        font-weight: 500;
+        color:color.adjust($primary-color, $lightness: 10%); /* Couleur du lien */
+        // color:$primary-color; /* Couleur du lien */
+        font-size: 1.2rem;
         text-decoration: none;
-        transition: color 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
 
         &:hover {
             color: color.adjust($success-color, $lightness: 20%);
+            transform: scale(1.1);
         }
 
         &::before,
@@ -186,21 +187,24 @@ h6 {
             width: 100%;
             height: 2px;
             background: color.adjust($success-color, $lightness: 20%); /* Couleur des lignes */
-            transition: transform 0.3s ease-in-out;
+            transition: all 0.3s ease-in-out;
         }
 
         &::before {
             bottom: 0;
             transform: translateX(-100%);
+            opacity: 0;
         }
-
+        
         &::after {
             top: 0;
+            opacity: 0;
             transform: translateX(100%);
         }
-
+        
         &:hover::before,
         &:hover::after {
+            opacity: 1;
             transform: translateX(0);
         }
     }
