--- a/sass/_about-us.scss
+++ b/sass/_about-us.scss
@@ -54,24 +54,26 @@
 
     &__circle img {
         transform: translate(-50%, -50%) scale(0);
-        animation: bounceIn 1.5s ease-in-out 1s forwards;
+        animation: bounceIn 0.8s ease-in-out 0.8s forwards;
     }
 
     &__magnifier img {
-        top: calc(50% + 21px);
-        left: calc(50% + 21px);
+        top: calc(50% + 20px);
+        left: calc(50% + 18px);
         transform: translate(-50%, -50%) scale(0);
-        animation: loupe-rotate 2s ease-in-out 0.5s forwards;
+        animation: loupe-rotate 1.3s ease-in-out 0.8s forwards;
     }
 
     &__guy img {
         top: 50%;
-        left: calc(50% + 3px);
+        left: 50%;
         transform: translate(-50%, -50%) scale(0);
-        animation: bounceIn 2s ease-in-out 2.5s forwards;
+        animation: bounceIn 1.8s ease-in-out 1.6s forwards;
     }
 
-    /* Animations */
+    /*********************/
+    /* Animations du logo*/
+    /*********************/
     @keyframes loupe-rotate {
         0% {
             transform: translate(-50%, -50%) scale(0) rotate(0deg);
@@ -142,7 +144,7 @@
             position: absolute;
             top: calc(50% - 100px);
             right: -100%;
-            animation: article-left-expand 0.8s ease-in-out 3.8s forwards;
+            animation: article-expand 0.5s ease-in-out 2.5s forwards;
         }
 
         &:nth-of-type(2) {
@@ -153,7 +155,7 @@
             top: calc(50% - 100px);
             left: 0;
             opacity: 0;
-            animation: article-left-expand 0.8s ease-in-out 7s forwards;
+            animation: article-expand 0.5s ease-in-out 4.5s forwards;
         }
 
         &:nth-of-type(3) {
@@ -165,7 +167,7 @@
             position: absolute;
             bottom: calc(-50% + 100px);
             right: -100%;
-            animation: article-left-expand 0.8s ease-in-out 10.2s forwards;
+            animation: article-expand 0.5s ease-in-out 6.5s forwards;
         }
 
         &:nth-of-type(4) {
@@ -176,11 +178,13 @@
             position: absolute;
             top: calc(0%);
             left: 0%;
-            animation: article-left-expand 0.8s ease-in-out 13.4s forwards;
+            animation: article-expand 0.5s ease-in-out 8.5s forwards;
         }
 
-        // Animation des articles
-        @keyframes article-left-expand {
+        /**************************/
+        /* Animation des articles */
+        /**************************/
+        @keyframes article-expand {
             0% {
                 width: 0;
             }
@@ -198,11 +202,11 @@
             width: 565.68px;
             border-bottom: variables.$primary-color solid 2px;
             position: absolute;
-            top: calc(50% - 400px);
+            top: calc(50% - 399px);
             left: calc(50%);
             transform: translate(-50%, -50%) rotate(45deg);
             opacity: 0;
-            animation: border-bottom-expand 0.8s ease-in-out 3s forwards;
+            animation: border-bottom-expand 0.5s ease-in-out 2s forwards;
         }
 
         &:nth-of-type(2) {
@@ -210,11 +214,11 @@
             width: 258px;
             border-right: red solid 2px;
             position: absolute;
-            top: calc(50% - 288px);
-            left: calc(50% + 112px);
+            top: calc(50% - 289px);
+            left: calc(50% + 110px);
             transform: translate(-50%, -50%) rotate(45deg);
             opacity: 0;
-            animation: border-right-expand 0.8s ease-in-out 6.2s forwards;
+            animation: border-right-expand 0.5s ease-in-out 4s forwards;
         }
 
         &:nth-of-type(3) {
@@ -222,11 +226,11 @@
             width: 565.68px;
             border-left: #f9bc16 solid 2px;
             position: absolute;
-            top: calc(50% + 400px);
+            top: calc(50% + 399px);
             left: calc(50%);
             transform: translate(-50%, -50%) rotate(45deg);
             opacity: 0;
-            animation: border-left-expand 0.8s ease-in-out 9.4s forwards;
+            animation: border-left-expand 0.5s ease-in-out 6s forwards;
         }
 
         &:nth-of-type(4) {
@@ -234,13 +238,16 @@
             width: 565.68px;
             border-top: #83c440 solid 2px;
             position: absolute;
-            top: calc(50% + 400px);
+            top: calc(50% + 399px);
             left: calc(50%);
             transform: translate(-50%, -50%) rotate(45deg);
             opacity: 0;
-            animation: border-top-expand 0.8s ease-in-out 12.6s forwards;
+            animation: border-top-expand 0.5s ease-in-out 8s forwards;
         }
 
+        /*************************/
+        /* Animation des bordures */
+        /**************************/
         @keyframes border-bottom-expand {
             0% {
                 width: 0;
@@ -255,6 +262,12 @@
         @keyframes border-right-expand {
             0% {
                 height: 0;
+            }
+            99% {
+                height: 560px;
+                opacity: 1;
+                background-color: variables.$background-color;
+                border-bottom: none;
             }
             100% {
                 height: 565.68px;
@@ -279,53 +292,68 @@
             0% {
                 width: 0;
             }
+            99% {
+                width: 560px;
+                opacity: 1;
+                background-color: variables.$background-color;
+                border-left: none;
+            }
             100% {
                 width: 565.68px;
                 opacity: 1;
                 background-color: variables.$background-color;
+                border-left: #f9bc16 solid 2px;
             }
         }
     }
 
     &__content {
+        
         &--1 {
             height: 100%;
             width: 100%;
+            padding: 1rem;
             background-color: color.adjust(variables.$primary-color, $lightness: 40%);
             @include mixins.flexbox(column, space-evenly, flex-start);
             opacity: 0;
-            animation: content-top-expand 0.8s ease-in-out 4.6s forwards;
+            animation: content-expand 0.5s ease-in-out 3s forwards;
             overflow: hidden;
-
+            
             & h2,
             & p {
+                width: 85%;
                 transform: translateX(-100%);
-                animation: text-left-entry 0.8s ease-in-out 5.4s forwards;
+                animation: text-left-entry 0.5s ease-in-out 3.5s forwards;
                 padding-right: 10rem;
             }
         }
-
+        
         &--2 {
             height: 100%;
             width: 100%;
+            padding: 1rem;
             background-color: color.adjust(red, $lightness: 40%);
             @include mixins.flexbox(column, space-evenly);
             opacity: 0;
-            animation: content-top-expand 0.8s ease-in-out 7.8s forwards;
+            animation: content-expand 0.5s ease-in-out 5s forwards;
             overflow: hidden;
             text-align: right;
-
+            
             & h2,
             & p {
+                position: relative;
+                right: -15%;
+                width: 85%;
                 transform: translateX(100%);
-                animation: text-right-entry 0.8s ease-in-out 8.6s forwards;
+                animation: text-right-entry 0.5s ease-in-out 5.5s forwards;
                 padding-left: 10rem;
             }
         }
-
+        
         &--3 {
             height: 100%;
             width: 100%;
+            padding: 1rem;
             background-color: color.adjust(#f9bc16, $lightness: 40%);
             @include mixins.flexbox(column, space-evenly, flex-start);
             transform: translate(-100%, -100%);
@@ -333,20 +361,22 @@
             top: 100%;
             right: -100%;
             opacity: 0;
-            animation: content-top-expand 0.8s ease-in-out 11s forwards;
+            animation: content-expand 0.5s ease-in-out 7s forwards;
             overflow: hidden;
-
+            
             & h2,
             & p {
+                width: 85%;
                 transform: translateX(-100%);
-                animation: text-left-entry 0.8s ease-in-out 11.8s forwards;
+                animation: text-left-entry 0.5s ease-in-out 7.5s forwards;
                 padding-right: 15rem;
             }
         }
-
+        
         &--4 {
             height: 100%;
             width: 100%;
+            padding: 1rem;
             background-color: color.adjust(#83c440, $lightness: 40%);
             @include mixins.flexbox(column, space-evenly);
             opacity: 0;
@@ -354,19 +384,25 @@
             position: absolute;
             top: 100%;
             right: -100%;
-            animation: content-top-expand 0.8s ease-in-out 14.2s forwards;
+            animation: content-expand 0.5s ease-in-out 9s forwards;
             overflow: hidden;
             text-align: right;
-
+            
             & h2,
             & p {
+                position: relative;
+                right: -15%;
+                width: 85%;
                 transform: translateX(100%);
-                animation: text-right-entry 0.8s ease-in-out 15s forwards;
+                animation: text-right-entry 0.5s ease-in-out 9.5s forwards;
                 padding-left: 10rem;
             }
         }
-
-        @keyframes content-top-expand {
+        
+        /**************************/
+        /* Animation du background */
+        /***************************/
+        @keyframes content-expand {
             0% {
                 height: 0;
             }
@@ -376,6 +412,9 @@
             }
         }
 
+        /*********************/
+        /* Animation du texte */
+        /**********************/
         @keyframes text-left-entry {
             0% {
                 transform: translateX(-100%);
