--- a/sass/_profiles.scss
+++ b/sass/_profiles.scss
@@ -8,46 +8,259 @@
 ********************/
 
 .profiles {
+    height: 1400px;
+    width: 100%;
+    position: relative;
+    margin-bottom: 8rem;
+
     &__container {
-        height: 600px;
-        max-width: 1440px;
-        margin: auto;
+        height: 80%;
+        width: 70%;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(4, 1fr);
         gap: 16px;
-        margin-bottom: 8rem;
+        transform: translate(-50%, 0%);
+        position: absolute;
+        bottom: 0%;
+        left: 50%;
+    }
+
+    &__title {
+        position: absolute;
+        top: 5%;
+        left: 10%;
+        padding: 2rem;
+        font-size: 3rem;
     }
 
     &__item {
+
         &--1 {
+            position: relative;
             grid-area: 1 / 1 / 2 / 3;
-            background-color: #007bff; /* Couleur primaire */
+            background-color: rgba(0, 123, 255, 0.7);
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover {
+                transform: scale(1.05) ease-in-out;
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            }
+
+            &:hover .profiles__image img {
+                transform: scale(1.2);
+            }
+
+            &:hover .profiles__item-title {
+                font-size: 2rem;
+                top: 1rem;
+                left: 1rem;
+                transform: translate(0%, 0%);
+            }
+
+            &:hover .profiles__button {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1) ease-in-out;
+            }
         }
 
         &--2 {
+            position: relative;
             grid-area: 1 / 3 / 2 / 5;
-            background-color: variables.$success-color; /* Couleur de succès */
+            background-color: rgba(40, 167, 69, 0.7);
+           overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover {
+                transform: scale(1.05) ease-in-out;
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            }
+
+            &:hover .profiles__image img {
+                transform: scale(1.2);
+            }
+
+            &:hover .profiles__item-title {
+                font-size: 1.5rem;
+                top: 1rem;
+                left: 1rem;
+                transform: translate(0%, 0%);
+            }
+
+            &:hover .profiles__button {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1) ease-in-out;
+            }
         }
 
         &--3 {
+            position: relative;
             grid-area: 2 / 1 / 5 / 2;
-            background-color: variables.$warning-color; /* Couleur d'avertissement */
+            background-color: rgba(255, 193, 7, 0.7); /* Couleur d'avertissement */
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover {
+                transform: scale(1.05) ease-in-out;
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            }
+
+            &:hover .profiles__image img {
+                transform: scale(1.2);
+            }
+
+            &:hover .profiles__item-title {
+                font-size: 1.5rem;
+                top: 1rem;
+                left: 1rem;
+                transform: translate(0%, 0%);
+            }
+
+            &:hover .profiles__button {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1) ease-in-out;
+            }
         }
 
         &--4 {
+            position: relative;
             grid-area: 4 / 2 / 5 / 5;
-            background-color: gray; /* Couleur neutre (définie dans variables) */
+            background-color: rgba(
+                128,
+                128,
+                128,
+                0.7
+            ); /* Couleur neutre (définie dans variables) */
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover {
+                transform: scale(1.05) ease-in-out;
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            }
+
+            &:hover .profiles__image img {
+                transform: scale(1.2);
+            }
+
+            &:hover .profiles__item-title {
+                font-size: 1.5rem;
+                top: 1rem;
+                left: 1rem;
+                transform: translate(0%, 0%);
+            }
+
+            &:hover .profiles__button {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1) ease-in-out;
+            }
         }
 
         &--5 {
+            position: relative;
             grid-area: 2 / 4 / 4 / 5;
-            background-color: purple; /* Couleur secondaire ou autre couleur définie */
+            background-color: rgba(128, 0, 128, 0.7); /* Couleur neutre (définie dans variables) */
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover {
+                transform: scale(1.05) ease-in-out;
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            }
+
+            &:hover .profiles__image img {
+                transform: scale(1.2);
+            }
+
+            &:hover .profiles__item-title {
+                font-size: 1.5rem;
+                top: 1rem;
+                left: 1rem;
+                transform: translate(0%, 0%);
+            }
+
+            &:hover .profiles__button {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1) ease-in-out;
+            }
         }
 
         &--6 {
+            position: relative;
             grid-area: 2 / 2 / 4 / 4;
-            background-color: red; /* Couleur d'erreur */
+            background-color: rgba(255, 0, 0, 0.7); /* Couleur d'erreur */
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover {
+                transform: scale(1.05) ease-in-out;
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            }
+
+            &:hover .profiles__image img {
+                transform: scale(1.2);
+            }
+
+            &:hover .profiles__item-title {
+                font-size: 1.5rem;
+                top: 1rem;
+                left: 1rem;
+                transform: translate(0%, 0%);
+            }
+
+            &:hover .profiles__button {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1) ease-in-out;
+            }
+        }
+    }
+
+    &__image {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -2;
+
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transform: scale(1.3);
+            transition: all 0.3s ease-in-out;
+        }
+    }
+
+    &__item-title {
+        font-size: 3rem;
+        font-weight: 700;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition: top 0.3s ease, left 0.3s ease, font-size 0.3s ease;
+    }
+
+    // TODO: créer une fonction qui gère le background color selon la couleur du bck de l'item
+    &__button {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0.8);
+        background-color: variables.$primary-color;
+        color: variables.$background-color;
+        padding: 0.8rem 1.5rem;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 1.2rem;
+        opacity: 0;
+        transition: opacity 0.3s ease, transform 0.3s ease;
+
+        &:hover {
+            background-color: variables.$success-color;
         }
     }
 }
