--- a/sass/_jobs.scss
+++ b/sass/_jobs.scss
@@ -7,20 +7,19 @@
 ***   Jobs   ***
 ***          ***
 ****************/
-
 .jobs {
     height: 1200px;
     width: 100%;
     margin: auto;
-    z-index: 1;
     position: relative;
-    @include mixins.flexbox(row, center, center);
+    @include mixins.flexbox(column, center, flex-start);
     margin-bottom: 8rem;
+    z-index: 1;
 
     &__image {
         position: absolute;
         top: 0;
-        left: 0px;
+        left: 0;
         z-index: -2;
         height: 100%;
         width: 100%;
@@ -32,24 +31,17 @@
         }
     }
 
-    &__content{
+    &__main-title {
         position: absolute;
         top: 10%;
         left: 0;
         width: 100%;
         padding: 2rem;
-    }
 
-    &__main-title {
-        font-size: 3rem;
-        color: variables.$background-color;
-    }
-
-    &__carousel {
-        height: 60%;
-        width: 90%;
-        position: absolute;
-        bottom: 20%;
+        & h2 {
+            font-size: 3rem;
+            color: variables.$background-color;
+        }
     }
 
     &__control {
@@ -60,6 +52,8 @@
         transform: translate(-50%, -50%);
         font-size: 3rem;
         color: variables.$background-color;
+        transition: all 0.3s ease;
+        z-index: 2;
 
         &--prev {
             top: 50%;
@@ -72,34 +66,50 @@
             left: 100%;
             background-color: variables.$warning-color;
         }
+
+        &:hover {
+            height: 96px;
+            width: 96px;
+            background-color: color.adjust(variables.$primary-color, $lightness: -10%);
+            color: variables.$success-color;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+        }
     }
 
-    &__container {
-        height: 100%;
-        width: 100%;
-        margin: auto;
-        @include mixins.flexbox(row nowrap, center, center, 2rem);
-        overflow: hidden;
-       
+    &__carousel {
+        width: 90%;
+        height: 60%;
+        position: relative;
+        margin: 0 auto;
     }
 
     &__item {
-        height: 80%;
-        width: 80%;
-        padding: 2rem;
+        height: 100%;
+        width: 40%;
         background-color: variables.$background-color;
-        @include mixins.flexbox(column, space-between, flex-start);
         border-radius: 5px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+        padding: 2rem;
+        transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    &__content {
+        height: 100%;
+        width: 100%;
+        padding: 2rem;
+        @include mixins.flexbox(column, space-between, flex-start);
+        
     }
 
     &__title {
+        font-size: 1.5rem;
         margin-bottom: 1rem;
+        color: variables.$font-color;
     }
 
     &__infos {
-        height: 10%;
-        width: 10%;
+        height: 20%;
+        width:30%;
         margin-left: 1rem;
         margin-bottom: 1rem;
         @include mixins.flexbox(column, center, center, 0.4rem);
@@ -141,47 +151,92 @@
 
     &__description {
         height: 50%;
-        width: 80%;
+        width: 100%;
         padding: 1rem;
         margin-bottom: 1rem;
-        overflow-y: scroll;
         overflow-x: hidden;
     }
 
     &__tag {
-        height: 10%;
-        width: fit-content;
-        padding: 0.5rem;
-        @include mixins.flexbox(row nowrap, flex-start, center, 1rem);
+        @include mixins.flexbox(row wrap, center, center, 0.5rem);
         margin-bottom: 1rem;
-
-        & i {
-            display: block;
-            width: 30px;
-            text-align: center;
-        }
-
+        
         & p {
             background-color: variables.$warning-color;
-            padding: 0.5rem 0.8rem;
+            padding: 0.5rem 1rem;
             border-radius: 10px;
+            font-size: 0.8rem;
+            color: variables.$background-color;
+        }
+    }
+    
+    &__cta {
+        @include mixins.flexbox(row, center, center, 1rem);
+
+        & button {
+            background-color: variables.$primary-color;
+            color: variables.$background-color;
+            border: none;
+            border-radius: 5px;
+            padding: 0.5rem 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+
+            &:hover {
+                background-color: color.adjust(variables.$primary-color, $lightness: -10%);
+            }
+        }
+    }
+}
+
+.slick-track {
+    display: flex !important;
+    height: 100%;
+}
+
+.slick-list {
+    height: 100%;
+}
+
+.slick-slide {
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    transform: scale(0.9);
+}
+
+// Effets appliqués uniquement si plus de 3 éléments
+.carousel--large .slick-slide:not(.slick-current) {
+    transform: scale(0.9);
+    opacity: 0.7;
+}
+
+.carousel--large .slick-current {
+    transform: scale(1);
+    opacity: 1;
+    z-index: 2;
+}
+
+// Effets appliqués uniquement 2 éléments ou moins
+.carousel {
+    &--solo {
+        .slick-slide {
+            width: 40% !important; // Ajuste la taille de l'élément
+            margin: auto; // Centre l'élément
+            justify-self: center;
+            align-self: center;
         }
     }
 
-    &__cta {
-        height: 10%;
-    }
-
-    &__button {
-        height: 100%;
-        width: 10rem;
-        background-color: variables.$primary-color;
-        color: variables.$background-color;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
+    &--duo {
+        .slick-slide {
+            width: 40% !important; // Ajuste la taille des deux éléments
+        }
+        .slick-track {
+            justify-content: center; // Aligne les deux éléments au centre
+        }
     }
 }
+
+
 
 /********************
 ***               ***
@@ -190,32 +245,32 @@
 *********************/
 
 .jobs-modal {
-    // position: fixed;
-    // top: 0;
-    // left: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6); /* Overlay sombre */
     @include mixins.flexbox(row, center, center);
-    // visibility: hidden;
-    // opacity: 0;
-    // z-index: 1000;
-    // transition: opacity 0.3s ease, visibility 0.3s ease;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 1000;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
 
-    // &--hidden {
-    //     visibility: hidden;
-    //     opacity: 0;
-    // }
+    &--hidden {
+        visibility: hidden;
+        opacity: 0;
+    }
 
-    // &__overlay {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     background-color: rgba(0, 0, 0, 0.6); /* Overlay transparent */
-    //     z-index: -1;
-    // }
+    &__overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6); /* Overlay transparent */
+        z-index: -1;
+    }
 
     &__content {
         background-color: #fff;
@@ -224,14 +279,14 @@
         border-radius: 10px;
         padding: 2rem;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
-        // transform: translateY(-50px); /* Animation d’apparition */
-        // opacity: 0;
-        // transition: transform 0.3s ease, opacity 0.3s ease;
+        transform: translateY(-50px); /* Animation d’apparition */
+        opacity: 0;
+        transition: transform 0.3s ease, opacity 0.3s ease;
 
-        // &.show {
-        //     transform: translateY(0);
-        //     opacity: 1;
-        // }
+        &.show {
+            transform: translateY(0);
+            opacity: 1;
+        }
     }
 
     &__close {
