--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,16 +9,103 @@
 ******************/
 
 .header {
+    // &__container {
+    //     position: sticky;
+    //     top: 0;
+    //     width: 100%;
+    //     @include mixins.flexbox(row, space-between, center); // Utilisation de la mixin flexbox
+    //     z-index: 100;
+    //     transition: background 0.3s ease, box-shadow 0.3s ease, backdrop-filter 0.3s ease;
+
+    //     &--background {
+    //         background: rgba(255, 255, 255, 0.25); // Effet de verre dépoli
+    //         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    //         backdrop-filter: blur(10px);
+    //         -webkit-backdrop-filter: blur(10px);
+    //         border-bottom: 1px solid rgba(255, 255, 255, 0.28);
+    //     }
+    // }
+
+    // &__logo {
+    //     height: 100%;
+    //     width: 200px;
+    //     @include mixins.flexbox(row, center, center);
+
+    //     & img {
+    //         height: 100%;
+    //         width: 100%;
+    //         filter: contrast(110%) saturate(100%) brightness(110%);
+    //     }
+    // }
+
+    // &__navbar {
+    //     width: 35%;
+    //     margin-right: 5rem;
+    // }
+
+    // &__nav-list {
+    //     @include mixins.flexbox(row, space-between, center);
+    //     list-style: none;
+    // }
+
+    // &__nav-link {
+    //     position: relative;
+    //     padding: 10px 0;
+    //     display: inline-block;
+    //     overflow: hidden;
+    //     color: color.adjust(variables.$primary-color, $lightness: 10%); // Couleur du lien
+    //     font-size: 1.2rem;
+    //     text-decoration: none;
+    //     transition: all 0.3s ease-in-out;
+
+    //     &:hover {
+    //         color: color.adjust(variables.$success-color, $lightness: 20%);
+    //         transform: scale(1.1);
+    //     }
+
+    //     &::before,
+    //     &::after {
+    //         content: "";
+    //         position: absolute;
+    //         left: 0;
+    //         width: 100%;
+    //         height: 2px;
+    //         background: color.adjust(
+    //             variables.$success-color,
+    //             $lightness: 20%
+    //         ); // Couleur des lignes
+    //         transition: all 0.3s ease-in-out;
+    //     }
+
+    //     &::before {
+    //         bottom: 0;
+    //         transform: translateX(-100%);
+    //         opacity: 0;
+    //     }
+
+    //     &::after {
+    //         top: 0;
+    //         opacity: 0;
+    //         transform: translateX(100%);
+    //     }
+
+    //     &:hover::before,
+    //     &:hover::after {
+    //         opacity: 1;
+    //         transform: translateX(0);
+    //     }
+    // }
+
     &__container {
         position: sticky;
         top: 0;
         width: 100%;
-        @include mixins.flexbox(row, space-between, center); // Utilisation de la mixin flexbox
+        @include mixins.flexbox(row, space-between, center);
         z-index: 100;
         transition: background 0.3s ease, box-shadow 0.3s ease, backdrop-filter 0.3s ease;
 
         &--background {
-            background: rgba(255, 255, 255, 0.25); // Effet de verre dépoli
+            background: rgba(255, 255, 255, 0.25);
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
@@ -38,22 +125,66 @@
         }
     }
 
+    &__burger {
+        display: none; // Caché sur les grands écrans
+        background: none;
+        border: none;
+        font-size: 2rem;
+        cursor: pointer;
+        z-index: 110; // Toujours au-dessus du menu
+        color: variables.$primary-color;
+
+        @media (max-width: 768px) {
+            display: block; // Visible sur les petits écrans
+            margin-right: 2.5rem;
+        }
+    }
+
     &__navbar {
         width: 35%;
         margin-right: 5rem;
+
+        @media (max-width: 768px) {
+            display: none; // Caché par défaut en dessous de 768px
+            position: absolute;
+            top: 70%;
+            right: -2.5rem;
+            background: variables.$background-color;
+            z-index: 100; // Juste en dessous du bouton burger
+        }
+
+        &--active {
+            @media (max-width: 768px) {
+                display: block; // Affiché quand actif
+            }
+        }
     }
 
     &__nav-list {
-        @include mixins.flexbox(row, space-between, center);
+        @include mixins.flexbox(column, flex-end, flex-end); // Menu vertical sur mobile
+
+        @media (min-width: 769px) {
+            @include mixins.flexbox(row, space-between, center); // Retour à horizontal sur grands écrans
+        }
+
         list-style: none;
+        padding: 0;
+        margin: 0;
     }
 
     &__nav-link {
+        padding: 1rem;
+        text-align: center;
+        width: 100%; // Occupe toute la largeur sur mobile
+
+        @media (min-width: 769px) {
+            width: auto; // Retour à la taille normale sur grands écrans
+        }
+
         position: relative;
-        padding: 10px 0;
         display: inline-block;
         overflow: hidden;
-        color: color.adjust(variables.$primary-color, $lightness: 10%); // Couleur du lien
+        color: color.adjust(variables.$primary-color, $lightness: 10%);
         font-size: 1.2rem;
         text-decoration: none;
         transition: all 0.3s ease-in-out;
@@ -70,10 +201,7 @@
             left: 0;
             width: 100%;
             height: 2px;
-            background: color.adjust(
-                variables.$success-color,
-                $lightness: 20%
-            ); // Couleur des lignes
+            background: color.adjust(variables.$success-color, $lightness: 20%);
             transition: all 0.3s ease-in-out;
         }
 
@@ -95,6 +223,7 @@
             transform: translateX(0);
         }
     }
+
 
     &__wrapper {
         position: static;
