--- a/sass/_jobs.scss
+++ b/sass/_jobs.scss
@@ -160,6 +160,10 @@
         @include mixins.flexbox(row wrap, center, center, 0.5rem);
         margin-bottom: 1rem;
 
+        & i{
+            font-size: 1.5rem;
+        }
+
         & p {
             background-color: variables.$warning-color;
             padding: 0.5rem 1rem;
@@ -284,16 +288,17 @@
     &__close {
         background: none;
         border: none;
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: #333;
         position: absolute;
         top: 16px;
         right: 16px;
         cursor: pointer;
-        transition: color 0.3s ease;
+        transition: all 0.3s ease-in-out;
 
         &:hover {
             color: #f00;
+            transform: scale(1.5);
         }
     }
 
