--- a/sass/_profiles.scss
+++ b/sass/_profiles.scss
@@ -300,7 +300,7 @@
 
     &__content {
         // background-color: #fff;
-        // height: 600px;
+        height: 1000px;
         width: 100%;
         max-width: 800px;
         border-radius: 10px;
@@ -319,16 +319,17 @@
     &__close {
         background: none;
         border: none;
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: #fff;
         position: absolute;
         top: 5%;
         right: 16px;
         cursor: pointer;
-        transition: color 0.3s ease;
+        transition: all 0.3s ease-in-out;
 
         &:hover {
             color: #f00;
+            transform: scale(1.5);
         }
     }
 
@@ -405,6 +406,8 @@
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         margin: 1rem;
         text-align: center;
+        overflow-y: scroll;
+        overflow-x: hidden;
 
         &__title {
             font-size: 1.8rem;
