--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,16 +5,16 @@
 *********************/
 
 /* Font */
-$main-font: "Roboto", sans-serif;
-$title-font: "Raleway", sans-serif;
-$cursive-font: "Edu AU VIC WA NT Pre", sans-serif;
+$main-font: "Montserrat", sans-serif;
+$title-font: "DM Sans", sans-serif;
+$cursive-font: "Poppins", sans-serif;
 $third-font: Arial, sans-serif;
 
 /* Color Palette*/
 $background-color: #f0f4f8;
 $font-color: #241623;
-$primary-color: #007bff;
-$secondary-color: #6c757d;
-$success-color: #28a745;
+$primary-color: #2DAAE2;
+$secondary-color: #F05126;
+$success-color: #83C440;
 $info-color: #17a2b8;
-$warning-color: #ffc107;
+$warning-color: #F9BC16;
