--- a/sass/_about-us.scss
+++ b/sass/_about-us.scss
@@ -16,6 +16,10 @@
         position: relative;
         width: 1440px;
         margin: auto;
+
+        @media (max-width: 768px) {
+            width: 100%;
+        }
     }
 
     &__image-container {
@@ -38,6 +42,10 @@
             z-index: -1;
             animation: bounceIn 1.5s ease-in-out 1s forwards;
             animation-play-state: paused;
+        }
+
+        @media (max-width: 768px) {
+            display: none;
         }
     }
 
@@ -132,6 +140,14 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
         gap: 0 5rem;
+
+        @media (max-width: 768px) {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     &__article {
@@ -149,11 +165,17 @@
             right: -100%;
             animation: article-expand 0.5s ease-in-out 2.5s forwards;
             animation-play-state: paused;
+
+            @media (max-width: 768px) {
+                position: static;
+                transform: translate(0%, 0%);
+                width: 85%;
+            }
         }
 
         &:nth-of-type(2) {
             width: 680px;
-            border-top: red solid 3px;
+            border-top: variables.$secondary-color solid 3px;
             grid-area: 1 / 2 / 2 / 3;
             position: absolute;
             top: calc(50% - 100px);
@@ -161,11 +183,17 @@
             opacity: 0;
             animation: article-expand 0.5s ease-in-out 4.5s forwards;
             animation-play-state: paused;
+
+            @media (max-width: 768px) {
+                position: static;
+                transform: translate(0%, 0%);
+                width: 85%;
+            }
         }
 
         &:nth-of-type(3) {
             width: 680px;
-            border-bottom: #f9bc16 solid 3px;
+            border-bottom: variables.$warning-color solid 3px;
             grid-area: 2 / 1 / 3 / 2;
             opacity: 0;
             transform: translate(-100%, -100%);
@@ -174,11 +202,17 @@
             right: -100%;
             animation: article-expand 0.5s ease-in-out 6.5s forwards;
             animation-play-state: paused;
+
+            @media (max-width: 768px) {
+                position: static;
+                transform: translate(0%, 0%);
+                width: 85%;
+            }
         }
 
         &:nth-of-type(4) {
             width: 680px;
-            border-bottom: #83c440 solid 3px;
+            border-bottom: variables.$success-color solid 3px;
             grid-area: 2 / 2 / 3 / 3;
             opacity: 0;
             position: absolute;
@@ -186,6 +220,12 @@
             left: 0%;
             animation: article-expand 0.5s ease-in-out 8.5s forwards;
             animation-play-state: paused;
+
+            @media (max-width: 768px) {
+                position: static;
+                transform: translate(0%, 0%);
+                width: 85%;
+            }
         }
 
         /**************************/
@@ -220,7 +260,7 @@
         &:nth-of-type(2) {
             height: 65.68px;
             width: 258px;
-            border-right: red solid 2px;
+            border-right: variables.$secondary-color solid 2px;
             position: absolute;
             top: calc(50% - 289px);
             left: calc(50% + 110px);
@@ -233,7 +273,7 @@
         &:nth-of-type(3) {
             height: 565.68px;
             width: 565.68px;
-            border-left: #f9bc16 solid 2px;
+            border-left: variables.$warning-color solid 2px;
             position: absolute;
             top: calc(50% + 399px);
             left: calc(50%);
@@ -246,7 +286,7 @@
         &:nth-of-type(4) {
             height: 565.68px;
             width: 565.68px;
-            border-top: #83c440 solid 2px;
+            border-top: variables.$success-color solid 2px;
             position: absolute;
             top: calc(50% + 399px);
             left: calc(50%);
@@ -313,8 +353,12 @@
                 width: 565.68px;
                 opacity: 1;
                 background-color: variables.$background-color;
-                border-left: #f9bc16 solid 2px;
+                border-left: variables.$warning-color solid 2px;
             }
+        }
+
+        @media (max-width: 768px) {
+            display: none;
         }
     }
 
@@ -324,7 +368,7 @@
             width: 100%;
             padding: 1rem;
             background-color: color.adjust(variables.$primary-color, $lightness: 40%);
-            @include mixins.flexbox(column, space-evenly, flex-start);
+            @include mixins.flexbox(column, start, flex-start, 1.3rem);
             opacity: 0;
             animation: content-expand 0.5s ease-in-out 3s forwards;
             overflow: hidden;
@@ -333,18 +377,33 @@
             & h2,
             & p {
                 width: 85%;
-                transform: translateX(-100%);
+                transform: translateX(-110%);
                 animation: text-left-entry 0.5s ease-in-out 3.5s forwards;
                 padding-right: 10rem;
+                font-size: 0.9rem;
+
+                @media (max-width: 768px) {
+                    padding-right: 0px;
+                }
             }
+
+            & h2{
+                font-size: 1.5rem;
+            }
+
+            @media (max-width: 768px) {
+                width: 85%;
+            }
+
+            
         }
 
         &--2 {
             height: 100%;
             width: 100%;
             padding: 1rem;
-            background-color: color.adjust(red, $lightness: 40%);
-            @include mixins.flexbox(column, space-evenly);
+            background-color: color.adjust(variables.$secondary-color, $lightness: 40%);
+            @include mixins.flexbox(column, start, flex-start, 1.3rem);
             opacity: 0;
             animation: content-expand 0.5s ease-in-out 5s forwards;
             overflow: hidden;
@@ -354,11 +413,40 @@
             & h2,
             & p {
                 position: relative;
-                right: -15%;
+                right: -16%;
                 width: 85%;
-                transform: translateX(100%);
+                transform: translateX(110%);
                 animation: text-right-entry 0.5s ease-in-out 5.5s forwards;
                 padding-left: 10rem;
+                font-size: 0.9rem;
+                
+                @media (max-width: 768px) {
+                    position: static;
+                    padding-left: 0;
+                }
+            }
+            
+            & h2{
+                font-size: 1.5rem;
+            }
+            
+            & ul{
+                font-size: 0.9rem;
+                margin: 1rem 0;
+                transform: translateX(110%);
+                list-style-type: circle;
+                width: 65%;
+                position: relative;
+                right: -36%;
+                text-align: justify;
+                animation: text-right-entry 0.5s ease-in-out 5.5s forwards;
+            }
+
+            @media (max-width: 768px) {
+                width: 85%;
+                text-align: left;
+                transform: translate(0%, 0%);
+                position: static;
             }
         }
 
@@ -366,8 +454,8 @@
             height: 100%;
             width: 100%;
             padding: 1rem;
-            background-color: color.adjust(#f9bc16, $lightness: 40%);
-            @include mixins.flexbox(column, space-evenly, flex-start);
+            background-color: color.adjust(variables.$warning-color, $lightness: 40%);
+            @include mixins.flexbox(column, start, flex-start, 1.3rem);
             transform: translate(-100%, -100%);
             position: absolute;
             top: 100%;
@@ -380,9 +468,37 @@
             & h2,
             & p {
                 width: 85%;
-                transform: translateX(-100%);
+                transform: translateX(-110%);
                 animation: text-left-entry 0.5s ease-in-out 7.5s forwards;
                 padding-right: 15rem;
+                font-size: 0.9rem;
+                
+                @media (max-width: 768px) {
+                    padding-right: 0px;
+                }
+            }
+            
+            & h2{
+                font-size: 1.5rem;
+            }
+            
+            & ul{
+                transform: translateX(-110%);
+                animation: text-left-entry 0.5s ease-in-out 7.5s forwards;
+                font-size: 0.9rem;
+                list-style-type: circle;
+                width: 65%;
+                position: relative;
+                left: 3%;
+                text-align: justify;
+                margin: -1rem 0;
+            }
+
+            @media (max-width: 768px) {
+                width: 85%;
+                text-align: left;
+                transform: translate(0%, 0%);
+                position: static;
             }
         }
 
@@ -390,8 +506,8 @@
             height: 100%;
             width: 100%;
             padding: 1rem;
-            background-color: color.adjust(#83c440, $lightness: 40%);
-            @include mixins.flexbox(column, space-evenly);
+            background-color: color.adjust(variables.$success-color, $lightness: 40%);
+            @include mixins.flexbox(column, start, flex-start, 1.3rem);
             opacity: 0;
             transform: translate(-100%, -100%);
             position: absolute;
@@ -405,11 +521,28 @@
             & h2,
             & p {
                 position: relative;
-                right: -15%;
-                width: 85%;
+                right: -26%;
+                width: 75%;
                 transform: translateX(100%);
                 animation: text-right-entry 0.5s ease-in-out 9.5s forwards;
                 padding-left: 10rem;
+                font-size: 0.9rem;
+
+                @media (max-width: 768px) {
+                    position: static;
+                    padding-left: 0;
+                }
+            }
+
+            & h2{
+                font-size: 1.5rem;
+            }
+
+            @media (max-width: 768px) {
+                width: 85%;
+                text-align: left;
+                transform: translate(0%, 0%);
+                position: static;
             }
         }
 
@@ -431,7 +564,7 @@
         /**********************/
         @keyframes text-left-entry {
             0% {
-                transform: translateX(-100%);
+                transform: translateX(-110%);
                 visibility: visible;
             }
             100% {
@@ -441,7 +574,7 @@
 
         @keyframes text-right-entry {
             0% {
-                transform: translateX(100%);
+                transform: translateX(110%);
                 visibility: visible;
             }
             100% {
@@ -463,42 +596,6 @@
         & .about-us__content--3,
         & .about-us__content--4 {
             animation-play-state: running;
-        }
-    }
-
-    @media (max-width: 768px) {
-        // Masquer les bordures diagonales
-        &__wraper {
-            display: none;
-        }
-
-        // Articles en disposition verticale
-        &__articles {
-            display: flex; // Utilisation de flexbox pour empiler les articles
-            flex-direction: column; // Disposition verticale
-            gap: 2rem; // Espacement entre les articles
-        }
-
-        &__article {
-            width: 100%; // Chaque article occupe toute la largeur
-            height: auto; // Ajustement automatique de la hauteur
-            opacity: 1; // Rendre visible sans animation
-            transform: none; // Supprimer les transformations
-            position: static; // Réinitialiser la position pour s'aligner dans le flux
-            animation: none; // Supprimer les animations
-        }
-
-        &__content {
-            padding: 2rem; // Ajouter de l'espace pour aérer
-            background-color: variables.$background-color; // Couleur de fond neutre
-
-            & h2,
-            & p {
-                width: 100%; // Texte prend toute la largeur
-                transform: none; // Suppression des transformations
-                animation: none; // Pas d'animation
-                padding: 0; // Réinitialiser le padding
-            }
         }
     }
 }
