--- a/sass/_confidential.scss
+++ b/sass/_confidential.scss
@@ -38,7 +38,7 @@
     &__content {
         background-color: #fff;
         width: 90%;
-        max-width: 800px; /* Largeur max pour un meilleur rendu */
+        max-width: 600px; /* Largeur max pour un meilleur rendu */
         border-radius: 10px;
         padding: 2rem;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
@@ -58,14 +58,14 @@
         font-size: 2rem;
         color: #333;
         position: absolute;
-        top: 1rem;
-        right: 0.5rem;
+        top: 0.3rem;
+        right: 0.3rem;
         cursor: pointer;
         transition: all 0.3s ease-in-out;
 
         &:hover {
-            color: #f00;
-            transform: scale(1.5);
+            color: variables.$secondary-color;
+            transform: scale(1.5) rotate(180deg);
         }
     }
 
