--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -19,7 +19,7 @@
         transition: background 0.3s ease, box-shadow 0.3s ease, backdrop-filter 0.3s ease;
 
         &--background {
-            background: rgba(255, 255, 255, 0.25);
+            background: rgba(255, 255, 255, 0.40);
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
@@ -29,7 +29,7 @@
 
     &__logo {
         height: 100%;
-        width: 200px;
+        width: 250px;
         @include mixins.flexbox(row, center, center);
 
         @media (max-width: 768px) {
@@ -45,16 +45,16 @@
     }
 
     &__burger {
-        display: none; // Caché sur les grands écrans
+        display: none;
         background: none;
         border: none;
         font-size: 1.5rem;
         cursor: pointer;
-        z-index: 110; // Toujours au-dessus du menu
-        color: variables.$primary-color;
+        z-index: 110;
+        color: variables.$secondary-color;
 
         @media (max-width: 768px) {
-            display: block; // Visible sur les petits écrans
+            display: block;
             margin-right: 2.5rem;
         }
     }
@@ -107,13 +107,14 @@
         position: relative;
         display: inline-block;
         overflow: hidden;
-        color: color.adjust(variables.$primary-color, $lightness: 10%);
-        font-size: 1.2rem;
+        color: color.adjust(variables.$secondary-color, $lightness: 10%);
+        font-size: 1.5rem;
+        font-weight: 500;
         text-decoration: none;
         transition: all 0.3s ease-in-out;
 
         &:hover {
-            color: color.adjust(variables.$success-color, $lightness: 20%);
+            color: color.adjust(variables.$success-color, $lightness: 10%);
             transform: scale(1.1);
         }
 
@@ -124,7 +125,7 @@
             left: 0;
             width: 100%;
             height: 2px;
-            background: color.adjust(variables.$success-color, $lightness: 20%);
+            background: color.adjust(variables.$success-color, $lightness: 10%);
             transition: all 0.3s ease-in-out;
         }
 
@@ -174,7 +175,7 @@
             width: 100%;
             max-height: 1080px;
             object-fit: cover;
-            filter: grayscale(100%) brightness(70%) contrast(120%);
+            filter: brightness(90%) contrast(110%);
             position: relative;
             mask-image: linear-gradient(to bottom, black 60%, transparent 100%);
             -webkit-mask-image: linear-gradient(to bottom, black 60%, transparent 100%);
@@ -185,7 +186,7 @@
         width: 80%;
         max-width: 1440px;
         position: absolute;
-        top: 40%;
+        top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
 
@@ -201,8 +202,9 @@
     &__title {
         color: variables.$background-color; // Utilisation de la variable pour la couleur
         font-family: variables.$cursive-font; // Font définie dans les variables
-        font-size: 4rem;
+        font-size: 3rem;
         font-weight: 300;
+        text-shadow: 5px 3px 0 #7A7A7A;
 
         @media (max-width: 768px) {
             font-size: 1rem;
