--- a/sass/_jobs.scss
+++ b/sass/_jobs.scss
@@ -23,7 +23,7 @@
         z-index: -2;
         height: 100%;
         width: 100%;
-
+        
         & img {
             width: 100%;
             height: 100%;
@@ -58,20 +58,19 @@
         &--prev {
             top: 50%;
             left: 0%;
-            background-color: variables.$success-color;
+            background-color: variables.$primary-color;
         }
 
         &--next {
             top: 50%;
             left: 100%;
-            background-color: variables.$warning-color;
+            background-color: variables.$primary-color;
         }
 
         &:hover {
             height: 96px;
             width: 96px;
-            background-color: color.adjust(variables.$primary-color, $lightness: -10%);
-            color: variables.$success-color;
+            background-color: color.adjust(variables.$success-color, $lightness: -10%);
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
         }
     }
@@ -101,14 +100,14 @@
     }
 
     &__title {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
         margin-bottom: 1rem;
         color: variables.$font-color;
     }
 
     &__infos {
         height: 20%;
-        width: 30%;
+        width: 40%;
         margin-left: 1rem;
         margin-bottom: 1rem;
         @include mixins.flexbox(column, center, center, 0.4rem);
@@ -297,8 +296,8 @@
         transition: all 0.3s ease-in-out;
 
         &:hover {
-            color: #f00;
-            transform: scale(1.5);
+            color: variables.$secondary-color;
+            transform: scale(1.5) rotate(180deg);
         }
     }
 
@@ -308,6 +307,8 @@
         line-height: 1.6;
         overflow-y: auto; /* Permet le défilement si le contenu est trop long */
         max-height: 80vh; /* Limite la hauteur à 80% de la vue */
+
+        
     }
 
     &__title {
