--- a/sass/_jobs.scss
+++ b/sass/_jobs.scss
@@ -23,7 +23,7 @@
         z-index: -2;
         height: 100%;
         width: 100%;
-        
+
         & img {
             width: 100%;
             height: 100%;
@@ -41,7 +41,12 @@
         & h2 {
             font-size: 3rem;
             color: variables.$background-color;
+            
+            @media (max-width: 768px) {
+                font-size: 1.8rem;
+            }
         }
+
     }
 
     &__control {
@@ -77,9 +82,11 @@
 
     &__carousel {
         width: 90%;
+        max-width: 1440px;
         height: 60%;
         position: relative;
         margin: 0 auto;
+        display: block;
     }
 
     &__item {
@@ -159,7 +166,7 @@
         @include mixins.flexbox(row wrap, center, center, 0.5rem);
         margin-bottom: 1rem;
 
-        & i{
+        & i {
             font-size: 1.5rem;
         }
 
@@ -193,7 +200,8 @@
 
 .slick-track {
     display: flex !important;
-    height: 100%;
+    height: 100% !important;
+    position:relative
 }
 
 .slick-list {
@@ -201,8 +209,12 @@
 }
 
 .slick-slide {
+    display: flex;
+    height: 100% !important;
     transition: transform 0.3s ease, opacity 0.3s ease;
     transform: scale(0.9);
+    flex: 0 0 auto;
+    overflow: hidden; 
 }
 
 // Effets appliqués uniquement si plus de 3 éléments
@@ -282,6 +294,10 @@
             transform: translateY(0);
             opacity: 1;
         }
+
+        @media (max-width: 768px) {
+            margin: 1rem 0;
+        }
     }
 
     &__close {
@@ -307,8 +323,6 @@
         line-height: 1.6;
         overflow-y: auto; /* Permet le défilement si le contenu est trop long */
         max-height: 80vh; /* Limite la hauteur à 80% de la vue */
-
-        
     }
 
     &__title {
@@ -331,6 +345,16 @@
         & > p strong {
             font-weight: bold;
             color: #444;
+        }
+
+        @media (max-width: 992px) {
+            width: 80%;
+            margin: 0 auto 1.5rem auto;
+        }
+       
+        @media (max-width: 768px) {
+            width: 80%;
+            margin: 0 auto 1.5rem auto;
         }
     }
 
