--- a/sass/_profiles.scss
+++ b/sass/_profiles.scss
@@ -39,7 +39,7 @@
         &--1 {
             position: relative;
             grid-area: 1 / 1 / 2 / 3;
-            background-color: rgba(45, 170, 226, 0.4);
+            background-color: rgba(45, 170, 226, 0.7);
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -68,36 +68,36 @@
         &--2 {
             position: relative;
             grid-area: 1 / 3 / 2 / 5;
-            background-color: rgba(255, 193, 7, 0.4); /* Couleur d'avertissement */
+            background-color: rgba(255, 193, 7, 0.7); /* Couleur d'avertissement */
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-            
+
             &:hover {
                 transform: scale(1.05) ease-in-out;
                 box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
             }
-            
+
             &:hover .profiles__image img {
                 transform: scale(1.2);
             }
-            
+
             &:hover .profiles__item-title {
                 font-size: 1.5rem;
                 top: 1rem;
                 left: 1rem;
                 transform: translate(0%, 0%);
             }
-            
+
             &:hover .profiles__button {
                 opacity: 1;
                 transform: translate(-50%, -50%) scale(1) ease-in-out;
             }
         }
-        
+
         &--3 {
             position: relative;
             grid-area: 2 / 1 / 5 / 2;
-            background-color: rgba(131, 196, 64, 0.4);
+            background-color: rgba(131, 196, 64, 0.7);
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -126,7 +126,7 @@
         &--4 {
             position: relative;
             grid-area: 4 / 2 / 5 / 5;
-            background-color: rgba(240, 81, 38, 0.4); /* Couleur d'erreur */
+            background-color: rgba(240, 81, 38, 0.7); /* Couleur d'erreur */
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -155,7 +155,7 @@
         &--5 {
             position: relative;
             grid-area: 2 / 4 / 4 / 5;
-            background-color: rgba(217, 59, 217, 0.4); /* Couleur neutre (définie dans variables) */
+            background-color: rgba(217, 59, 217, 0.7); /* Couleur neutre (définie dans variables) */
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -184,7 +184,7 @@
         &--6 {
             position: relative;
             grid-area: 2 / 2 / 4 / 4;
-            background-color: rgba(128, 128, 128, 0.4); /* Couleur d'erreur */
+            background-color: rgba(128, 128, 128, 0.7); /* Couleur d'erreur */
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -234,8 +234,13 @@
         position: absolute;
         top: 50%;
         left: 50%;
+        text-shadow: 5px 3px 0 color.scale(variables.$background-color, $blackness: 20%);
         transform: translate(-50%, -50%);
         transition: top 0.3s ease, left 0.3s ease, font-size 0.3s ease;
+
+        @media (max-width: 992px) {
+            font-size: 2rem;
+        }
     }
 
     &__button {
@@ -252,11 +257,11 @@
         font-size: 1.2rem;
         opacity: 0;
         transition: all 0.3s ease-in-out;
-        
+
         &:hover {
             background-color: variables.$success-color;
             transform: translate(-50%, -50%) scale(1);
-            box-shadow: 5px 5px 16px 6px rgba(0,0,0,0.5);
+            box-shadow: 5px 5px 16px 6px rgba(0, 0, 0, 0.5);
         }
     }
 }
@@ -326,7 +331,6 @@
         }
 
         &__item {
-            // position: relative;
             background-color: rgba(0, 123, 255, 0.7);
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -346,29 +350,18 @@
                 background-color: rgba(0, 123, 255, 0.7);
                 position: relative;
                 height: 200px;
-                width: 200px;
-                // grid-area: 1 / 1 / 2 / 3;
-                // background-color: rgba(0, 123, 255, 0.7);
+                width: 100%;
                 overflow: hidden;
-                transition: transform 0.3s ease, box-shadow 0.3s ease;
+                transition: box-shadow 0.3s ease;
 
-                &:hover {
-                    transform: scale(1.05) ease-in-out;
-                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-                }
-
-                &:hover .profiles__image img {
-                    transform: scale(1.2);
-                }
-
-                &:hover .profiles__item-title {
-                    font-size: 2rem;
+                & .profiles__item-title {
+                    font-size: 1.5rem;
                     top: 1rem;
                     left: 1rem;
                     transform: translate(0%, 0%);
                 }
 
-                &:hover .profiles__button {
+                & .profiles__button {
                     opacity: 1;
                     transform: translate(-50%, -50%) scale(1) ease-in-out;
                 }
@@ -378,29 +371,18 @@
                 background-color: rgba(40, 167, 69, 0.7);
                 position: relative;
                 height: 200px;
-                width: 200px;
-                // grid-area: 1 / 1 / 2 / 3;
-                // background-color: rgba(0, 123, 255, 0.7);
+                width: 100%;
                 overflow: hidden;
-                transition: transform 0.3s ease, box-shadow 0.3s ease;
+                transition: box-shadow 0.3s ease;
 
-                &:hover {
-                    transform: scale(1.05) ease-in-out;
-                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-                }
-
-                &:hover .profiles__image img {
-                    transform: scale(1.2);
-                }
-
-                &:hover .profiles__item-title {
-                    font-size: 2rem;
+                & .profiles__item-title {
+                    font-size: 1.5rem;
                     top: 1rem;
                     left: 1rem;
                     transform: translate(0%, 0%);
                 }
 
-                &:hover .profiles__button {
+                & .profiles__button {
                     opacity: 1;
                     transform: translate(-50%, -50%) scale(1) ease-in-out;
                 }
@@ -410,29 +392,18 @@
                 background-color: rgba(255, 193, 7, 0.7);
                 position: relative;
                 height: 200px;
-                width: 200px;
-                // grid-area: 1 / 1 / 2 / 3;
-                // background-color: rgba(0, 123, 255, 0.7);
+                width: 100%;
                 overflow: hidden;
-                transition: transform 0.3s ease, box-shadow 0.3s ease;
+                transition: box-shadow 0.3s ease;
 
-                &:hover {
-                    transform: scale(1.05) ease-in-out;
-                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-                }
-
-                &:hover .profiles__image img {
-                    transform: scale(1.2);
-                }
-
-                &:hover .profiles__item-title {
-                    font-size: 2rem;
+                & .profiles__item-title {
+                    font-size: 1.5rem;
                     top: 1rem;
                     left: 1rem;
                     transform: translate(0%, 0%);
                 }
 
-                &:hover .profiles__button {
+                & .profiles__button {
                     opacity: 1;
                     transform: translate(-50%, -50%) scale(1) ease-in-out;
                 }
@@ -442,29 +413,18 @@
                 background-color: rgba(128, 128, 128, 0.7);
                 position: relative;
                 height: 200px;
-                width: 200px;
-                // grid-area: 1 / 1 / 2 / 3;
-                // background-color: rgba(0, 123, 255, 0.7);
+                width: 100%;
                 overflow: hidden;
-                transition: transform 0.3s ease, box-shadow 0.3s ease;
+                transition: box-shadow 0.3s ease;
 
-                &:hover {
-                    transform: scale(1.05) ease-in-out;
-                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-                }
-
-                &:hover .profiles__image img {
-                    transform: scale(1.2);
-                }
-
-                &:hover .profiles__item-title {
-                    font-size: 2rem;
+                & .profiles__item-title {
+                    font-size: 1.5rem;
                     top: 1rem;
                     left: 1rem;
                     transform: translate(0%, 0%);
                 }
 
-                &:hover .profiles__button {
+                & .profiles__button {
                     opacity: 1;
                     transform: translate(-50%, -50%) scale(1) ease-in-out;
                 }
@@ -474,29 +434,18 @@
                 background-color: rgba(128, 0, 128, 0.7);
                 position: relative;
                 height: 200px;
-                width: 200px;
-                // grid-area: 1 / 1 / 2 / 3;
-                // background-color: rgba(0, 123, 255, 0.7);
+                width: 100%;
                 overflow: hidden;
                 transition: transform 0.3s ease, box-shadow 0.3s ease;
 
-                &:hover {
-                    transform: scale(1.05) ease-in-out;
-                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-                }
-
-                &:hover .profiles__image img {
-                    transform: scale(1.2);
-                }
-
-                &:hover .profiles__item-title {
-                    font-size: 2rem;
+                & .profiles__item-title {
+                    font-size: 1.5rem;
                     top: 1rem;
                     left: 1rem;
                     transform: translate(0%, 0%);
                 }
 
-                &:hover .profiles__button {
+                & .profiles__button {
                     opacity: 1;
                     transform: translate(-50%, -50%) scale(1) ease-in-out;
                 }
@@ -506,33 +455,26 @@
                 background-color: rgba(255, 0, 0, 0.7);
                 position: relative;
                 height: 200px;
-                width: 200px;
-                // grid-area: 1 / 1 / 2 / 3;
-                // background-color: rgba(0, 123, 255, 0.7);
+                width: 100%;
                 overflow: hidden;
                 transition: transform 0.3s ease, box-shadow 0.3s ease;
 
-                &:hover {
-                    transform: scale(1.05) ease-in-out;
-                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-                }
-
-                &:hover .profiles__image img {
-                    transform: scale(1.2);
-                }
-
-                &:hover .profiles__item-title {
-                    font-size: 2rem;
+                & .profiles__item-title {
+                    font-size: 1.5rem;
                     top: 1rem;
                     left: 1rem;
                     transform: translate(0%, 0%);
                 }
 
-                &:hover .profiles__button {
+                & .profiles__button {
                     opacity: 1;
                     transform: translate(-50%, -50%) scale(1) ease-in-out;
                 }
             }
+        }
+
+        &__item-title {
+            text-shadow: 4px 2px 0 variables.$background-color;
         }
     }
 }
@@ -602,6 +544,14 @@
             color: variables.$secondary-color;
             transform: scale(1.5) rotate(180deg);
         }
+
+        @media (max-width: 992px) {
+            top:10%;
+        }
+        
+        @media (max-width: 768px) {
+            top:10%;
+        }
     }
 
     &__carousel {
@@ -661,18 +611,18 @@
         }
     }
 
-    &__missions{
+    &__missions {
         list-style: disc;
         margin-left: 3rem;
     }
-    
-    &__skills{
+
+    &__skills {
         text-align: left;
         list-style: disc;
         margin-left: 3rem;
     }
-    
-    &__soft-skills{
+
+    &__soft-skills {
         text-align: left;
         list-style: disc;
         margin-left: 3rem;
@@ -713,10 +663,9 @@
 
         &__technologies {
             margin-bottom: 1rem;
-
         }
     }
-    
+
     &__tech {
         background-color: variables.$secondary-color;
         color: #fff;
